--- a/adults/README
+++ b/adults/README
@@ -1,1 +1,6 @@
+This folder includes the R code to run analyses and create visualizations for the adult cohort presented in the corresponding paper (in prep). 
 
+adult_weights.R is to be run to analyze weight and weight change with LMERs.
+oft_analysis.R is to be run to analyze open field test data for anxiety-like behavior.
+ppi_analysis.R analyzes the means and averages of prepulse inhibition data. 
+twolevel_analysis.R includes the analysis for volumetric data from the deformation-based morphometry.
